--- a/_assets/css/partials/_questionnaire.scss
+++ b/_assets/css/partials/_questionnaire.scss
@@ -3,7 +3,7 @@
     font-size: 22px;
     line-height: 28.6px;
     margin-bottom: 20px;
-    padding-top: 30px;
+    //padding-top: 30px;
   }
 
   .task-title h2 {
@@ -28,5 +28,4 @@
     box-shadow: none;
     border-bottom: none;
   }
-
 }
